aligning images correctly on more detail page

--- a/css/scss/modules/marketing/_more_details.scss
+++ b/css/scss/modules/marketing/_more_details.scss
@@ -6,6 +6,11 @@
     padding: 2.8em;
     line-height: 2em;
 
+    >div {
+      text-align: center;
+      margin-bottom: 2em;
+    }
+
     @include swb-medium {
       padding: 1em;
       line-height: 1.2em;
